historial de batallas y batallas

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -135,9 +135,9 @@
             {% if app.user %}
                 <h4>{{ app.user.username }}</h4>
                 <a href="{{ path('app_logout') }}" class="btn btn-primary">Logout</a>
-                <a href="{{ path('app_pokemons_mis_pokemons') }}" class="btn btn-primary">Mis Pokemons</a>
+                <a href="{{ path('app_pokemons_available') }}" class="btn btn-primary">Capturar Pokémon</a>
                 <a href="{{ path('app_fights_new') }}" class="btn btn-train">Nueva lucha</a>
-                <a href="{{ path('app_fights_index') }}" class="btn btn-primary">Historial de Combates</a>
+                <a href="{{ path('app_fights_user_history') }}" class="btn btn-primary">Mi Historial</a>
             {% else %}
                 <a href="{{ path('app_login') }}" class="btn btn-primary">Login</a>
                 <a href="{{ path('app_register') }}" class="btn btn-primary">Register</a>
