Cambios realizados de bd y entidades

--- a/templates/fights/new.html.twig
+++ b/templates/fights/new.html.twig
@@ -108,7 +108,7 @@
             <p><strong>Name:</strong> {{ random_pokemon.pokeplantilla.name }}</p>
             <p><strong>Level:</strong> {{ random_pokemon.level }}</p>
             <p><strong>Strength:</strong> {{ random_pokemon.strength }}</p>
-            <img src="{{ random_pokemon.img }}" alt="{{ random_pokemon.pokeplantilla.name }}" class="pokemon-img">
+            <img src="{{ random_pokemon.pokeplantilla.img }}" alt="{{ random_pokemon.pokeplantilla.name }}" class="pokemon-img">
         </div>
     </div>
     
