--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -148,7 +148,7 @@
     <div class="pokemon-grid">
         {% for pokemon in pokemons %}
             <div class="pokemon-card">
-                <img src="{{ pokemon.img }}" alt="{{ pokemon.pokeplantilla.name }}" class="pokemon-image">
+                <img src="{{ pokemon.pokeplantilla.img }}" alt="{{ pokemon.pokeplantilla.name }}" class="pokemon-image">
                 <div class="pokemon-info">
                     <h3>{{ pokemon.pokeplantilla.name }}</h3>
                     <div class="pokemon-stats">
