--- a/templates/pokemons/available.html.twig
+++ b/templates/pokemons/available.html.twig
@@ -61,7 +61,7 @@
 <div class="pokemon-container">
     <h1>¡Un Pokémon salvaje apareció!</h1>
     
-    <img src="{{ pokemon.img }}" alt="{{ pokemon.pokeplantilla.name }}" class="pokemon-image">
+    <img src="{{ pokemon.pokeplantilla.img }}" alt="{{ pokemon.pokeplantilla.name }}" class="pokemon-image">
     
     <div class="pokemon-info">
         <h2>{{ pokemon.pokeplantilla.name|capitalize }}</h2>
